--- a/.github/workflows/google-cloudrun-docker.yml
+++ b/.github/workflows/google-cloudrun-docker.yml
@@ -2,7 +2,7 @@ name: Build and Deploy to Google Cloud
 
 on:
   push:
-    branches: [ main ]  # Trigger the workflow on push to main branch
+    branches: [ development ]  # Trigger the workflow on push to main branch
 
 env:
   REGISTRY: ${{ secrets.GCP_REGISTRY }}
