--- a/.github/workflows/google-cloudrun-docker.yml
+++ b/.github/workflows/google-cloudrun-docker.yml
@@ -2,7 +2,7 @@ name: Build and Deploy to Google Cloud
 
 on:
   push:
-    branches: [ development ]  # Trigger the workflow on push to main branch
+    branches: [ development ] # Trigger the workflow on push to main branch
 
 env:
   REGISTRY: ${{ secrets.GCP_REGISTRY }}
@@ -10,19 +10,23 @@ env:
   GCP_SA_KEY: ${{ secrets.GCP_SA_KEY }}
   PROJECT_ID: ${{ secrets.GCP_PROJECT_ID }}
   IMAGE_NAME: munchi-merchant-api
-  SERVICE_NAME: munchi-merchant-dev-api  # If this is different from the image name
-  REGION: europe-north1  # Assuming this is your region, adjust if necessary
+  SERVICE_NAME: munchi-merchant-dev-api # If this is different from the image name
+  REGION: europe-north1 # Assuming this is your region, adjust if necessary
 
 jobs:
   build-and-deploy:
     runs-on: ubuntu-latest
-
     steps:
     - name: Checkout code
-      uses: actions/checkout@v2
+      uses: actions/checkout@v3
+
+    - name: Set up Node.js
+      uses: actions/setup-node@v3
+      with:
+        node-version: '20'
 
     - name: Set up Cloud SDK
-      uses: google-github-actions/setup-gcloud@v0.2.0
+      uses: google-github-actions/setup-gcloud@v1
       with:
         project_id: ${{ env.PROJECT_ID }}
         service_account_key: ${{ env.GCP_SA_KEY }}
