--- a/.github/workflows/google-cloudrun-docker.yml
+++ b/.github/workflows/google-cloudrun-docker.yml
@@ -28,9 +28,7 @@ jobs:
     - name: Set up Cloud SDK
       uses: google-github-actions/setup-gcloud@v1
       with:
-        project_id: ${{ env.PROJECT_ID }}
-        service_account_key: ${{ env.GCP_SA_KEY }}
-        export_default_credentials: true
+        credentials_json: '${{ env.GCP_SA_KEY }}'
 
     - name: Configure Docker
       run: |
