--- a/package.json
+++ b/package.json
@@ -27,18 +27,18 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
-    "@nestjs/axios": "^1.0.0",
-    "@nestjs/common": "^9.0.0",
-    "@nestjs/config": "^2.3.1",
-    "@nestjs/core": "9.0",
+    "@nestjs/axios": "^3.0.3",
+    "@nestjs/common": "^10.4.1",
+    "@nestjs/config": "^3.2.3",
+    "@nestjs/core": "10.4",
     "@nestjs/event-emitter": "^2.0.4",
-    "@nestjs/jwt": "^10.0.1",
-    "@nestjs/passport": "^9.0.0",
-    "@nestjs/platform-express": "^9.0.0",
-    "@nestjs/platform-socket.io": "^9.2.1",
-    "@nestjs/schedule": "^3.0.1",
-    "@nestjs/swagger": "^6.1.4",
-    "@nestjs/websockets": "^9.2.1",
+    "@nestjs/jwt": "^10.2.0",
+    "@nestjs/passport": "^10.0.3",
+    "@nestjs/platform-express": "^10.4.1",
+    "@nestjs/platform-socket.io": "^10.4.1",
+    "@nestjs/schedule": "^4.1.0",
+    "@nestjs/swagger": "^7.4.0",
+    "@nestjs/websockets": "^10.4.1",
     "@onesignal/node-onesignal": "^2.0.1-beta1",
     "@prisma/client": "^4.9.0",
     "@sentry/node": "^7.55.2",
@@ -47,7 +47,7 @@
     "@types/webpack-env": "^1.18.1",
     "api": "^5.0.1",
     "argon2": "^0.30.2",
-    "axios": "^1.1.3",
+    "axios": "^1.7.4",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
     "cryptr": "^6.1.0",
@@ -67,15 +67,14 @@
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^7.2.0",
-    "socket.io": "^4.5.4",
-    "socket.io-client": "^2.0.2",
+    "socket.io": "4.6.0",
     "swagger-ui-express": "^4.6.3",
     "uuid": "^9.0.0"
   },
   "devDependencies": {
-    "@nestjs/cli": "^9.0.0",
-    "@nestjs/schematics": "^9.0.0",
-    "@nestjs/testing": "^9.4.0",
+    "@nestjs/cli": "^10.4.4",
+    "@nestjs/schematics": "^10.1.4",
+    "@nestjs/testing": "^10.4.1",
     "@types/cron": "^2.0.1",
     "@types/cryptr": "^4.0.1",
     "@types/express": "^4.17.13",
