--- a/.github/workflows/google-cloudrun-docker.yml
+++ b/.github/workflows/google-cloudrun-docker.yml
@@ -24,10 +24,15 @@ jobs:
       with:
         node-version: '20'
 
-    - name: Set up Cloud SDK
+    - name: Authenticate to Google Cloud
       uses: google-github-actions/auth@v1
       with:
-        credentials_json: '${{ env.GCP_SA_KEY }}'
+        credentials_json: ${{ env.GCP_SA_KEY }}
+
+    - name: Set up Cloud SDK
+      uses: google-github-actions/setup-gcloud@v1
+      with:
+        project_id: ${{ env.PROJECT_ID }}
 
     - name: Configure Docker
       run: |
