--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "build": "nest build",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
     "start": "nest start",
-    "start:dev": "nest build --webpack --webpackPath webpack-hmr.config.js --watch",
+    "start:dev": "nest start --watch",
     "start:debug": "nest start --debug --watch",
     "start:prod": "node dist/main",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
@@ -27,82 +27,85 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
-    "@nestjs/axios": "^1.0.0",
-    "@nestjs/common": "^9.0.0",
-    "@nestjs/config": "^2.3.1",
-    "@nestjs/core": "9.0",
+    "@nestjs/axios": "^3.0.3",
+    "@nestjs/common": "^10.4.4",
+    "@nestjs/config": "^3.2.3",
+    "@nestjs/core": "10.4",
     "@nestjs/event-emitter": "^2.0.4",
-    "@nestjs/jwt": "^10.0.1",
-    "@nestjs/passport": "^9.0.0",
-    "@nestjs/platform-express": "^9.0.0",
-    "@nestjs/platform-socket.io": "^9.2.1",
-    "@nestjs/schedule": "^3.0.1",
-    "@nestjs/swagger": "^6.1.4",
-    "@nestjs/websockets": "^9.2.1",
-    "@onesignal/node-onesignal": "^2.0.1-beta1",
-    "@prisma/client": "^4.9.0",
-    "@sentry/node": "^7.55.2",
-    "@sentry/tracing": "^7.55.2",
-    "@socket.io/redis-adapter": "^7.2.0",
-    "@types/webpack-env": "^1.18.1",
-    "api": "^5.0.1",
-    "argon2": "^0.30.2",
-    "axios": "^1.1.3",
+    "@nestjs/jwt": "^10.2.0",
+    "@nestjs/passport": "^10.0.3",
+    "@nestjs/platform-express": "^10.4.4",
+    "@nestjs/platform-socket.io": "^10.4.4",
+    "@nestjs/schedule": "^4.1.1",
+    "@nestjs/swagger": "^7.4.2",
+    "@nestjs/websockets": "^10.4.4",
+    "@onesignal/node-onesignal": "^5.0.0-alpha-01",
+    "@prisma/client": "^5.20.0",
+    "@sentry/node": "^8.34.0",
+    "@sentry/tracing": "^7.114.0",
+    "@socket.io/redis-adapter": "^8.3.0",
+    "@types/webpack-env": "^1.18.5",
+    "api": "^6.1.2",
+    "argon2": "^0.41.1",
+    "axios": "^1.7.7",
     "class-transformer": "^0.5.1",
-    "class-validator": "^0.14.0",
-    "cryptr": "^6.1.0",
-    "moment": "^2.29.4",
-    "moment-timezone": "^0.5.43",
-    "nestjs-pino": "^3.4.0",
+    "class-validator": "^0.14.1",
+    "cryptr": "^6.3.0",
+    "moment": "^2.30.1",
+    "moment-timezone": "^0.5.46",
+    "nestjs-pino": "^4.1.0",
+    "npm-check-updates": "^17.1.3",
     "order": "^0.1.0",
     "ordering-api-sdk": "github:sergioaok/ordering-api-sdk",
-    "passport": "^0.6.0",
+    "passport": "^0.7.0",
     "passport-headerapikey": "^1.2.2",
     "passport-jwt": "^4.0.1",
     "passport-local": "^1.0.0",
-    "pino-http": "^8.5.0",
-    "pino-pretty": "^10.2.0",
-    "prisma": "^4.6.1",
-    "redis": "^4.5.0",
-    "reflect-metadata": "^0.1.13",
-    "rimraf": "^3.0.2",
-    "rxjs": "^7.2.0",
-    "socket.io": "^4.5.4",
-    "socket.io-client": "^2.0.2",
-    "swagger-ui-express": "^4.6.3",
-    "uuid": "^9.0.0"
+    "pino-http": "^10.3.0",
+    "pino-pretty": "^11.2.2",
+    "prisma": "^5.20.0",
+    "redis": "^4.7.0",
+    "reflect-metadata": "^0.2.2",
+    "rimraf": "^6.0.1",
+    "rxjs": "^7.8.1",
+    "socket.io": "^4.8.0",
+    "socket.io-client": "^4.8.0",
+    "swagger-ui-express": "^5.0.1",
+    "uuid": "^10.0.0"
   },
   "devDependencies": {
-    "@nestjs/cli": "^9.0.0",
-    "@nestjs/schematics": "^9.0.0",
-    "@nestjs/testing": "^9.4.0",
-    "@types/cron": "^2.0.1",
-    "@types/cryptr": "^4.0.1",
-    "@types/express": "^4.17.13",
-    "@types/jest": "28.1.4",
-    "@types/node": "^16.0.0",
-    "@types/passport-jwt": "^3.0.8",
-    "@types/passport-local": "^1.0.35",
+    "@nestjs/cli": "^10.4.5",
+    "@nestjs/schematics": "^10.1.4",
+    "@nestjs/testing": "^10.4.4",
+    "@swc/cli": "^0.4.0",
+    "@swc/core": "^1.7.35",
+    "@types/cron": "^2.4.0",
+    "@types/cryptr": "^4.0.3",
+    "@types/express": "^5.0.0",
+    "@types/jest": "29.5.13",
+    "@types/node": "^22.7.5",
+    "@types/passport-jwt": "^4.0.1",
+    "@types/passport-local": "^1.0.38",
     "@types/socket.io-client": "^3.0.0",
-    "@types/supertest": "^2.0.11",
-    "@types/uuid": "^9.0.0",
-    "@typescript-eslint/eslint-plugin": "^5.0.0",
-    "@typescript-eslint/parser": "^5.0.0",
-    "eslint": "^8.48.0",
-    "eslint-config-prettier": "^8.3.0",
-    "eslint-plugin-prettier": "^4.0.0",
-    "jest": "28.1.2",
-    "jest-mock-extended": "^3.0.4",
-    "prettier": "^2.3.2",
-    "run-script-webpack-plugin": "^0.1.1",
-    "source-map-support": "^0.5.20",
-    "supertest": "^6.1.3",
-    "ts-jest": "28.0.5",
-    "ts-loader": "^9.2.3",
-    "ts-node": "^10.0.0",
-    "tsconfig-paths": "4.0.0",
-    "typescript": "^4.3.5",
-    "webpack": "^5.74.0",
+    "@types/supertest": "^6.0.2",
+    "@types/uuid": "^10.0.0",
+    "@typescript-eslint/eslint-plugin": "^8.9.0",
+    "@typescript-eslint/parser": "^8.9.0",
+    "eslint": "^9.12.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-prettier": "^5.2.1",
+    "jest": "29.7.0",
+    "jest-mock-extended": "^3.0.7",
+    "prettier": "^3.3.3",
+    "run-script-webpack-plugin": "^0.2.0",
+    "source-map-support": "^0.5.21",
+    "supertest": "^7.0.0",
+    "ts-jest": "29.2.5",
+    "ts-loader": "^9.5.1",
+    "ts-node": "^10.9.2",
+    "tsconfig-paths": "4.2.0",
+    "typescript": "^5.6.3",
+    "webpack": "^5.95.0",
     "webpack-node-externals": "^3.0.0"
   },
   "jest": {
